Implemented MapView in DeliveryActivity.

--- a/app/src/main/res/layout/activity_delivery.xml
+++ b/app/src/main/res/layout/activity_delivery.xml
@@ -61,6 +61,13 @@
         android:id="@+id/deliveryCharge"
         />
 
+        <com.google.android.gms.maps.MapView
+            android:layout_width="match_parent"
+            android:layout_height="300dp"
+            android:layout_below="@id/totalDistance"
+            android:id="@+id/mapView"/>
+
+
 
     <TextView
         android:id="@+id/amountToPay"
