--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -17,6 +17,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginBottom="30dp"
         app:layout_constraintTop_toTopOf="parent">
 
 
@@ -56,7 +57,7 @@
                 android:layout_height="wrap_content"
                 android:layout_marginStart="110dp"
                 android:gravity="center"
-                android:text="M1B2V2"
+                android:inputType="textCapWords"
                 android:padding="7dp" />
         </com.google.android.material.textfield.TextInputLayout>
 
