Implemented Google Maps, Polylines and Polyline onClickListener to choose different path. Color changes to the selected polyline also implemented successfully.

--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,7 @@
     <color name="colorWhite">#ffffff</color>
     <color name="colorBlack">#000000</color>
     <color name="colorRed">#ff0000</color>
+    <color name="colorBlue">#005EFF</color>
     <color name="colorBtnSignIn">#1fbad6</color>
     <color name="colortoolbar">#489cff</color>
     <color name="colorRippleEffect">#2e6ad1</color>
